force-app/main/default/objects/Start__c/Start__c.object-meta.xml
<CustomObject>
    <label>Projet de création</label>
    <nameField>
        <label>Nom du projet</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projets de création</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>