force-app/main/default/objects/Start__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Starts</relationshipName>
    <type>Lookup</type>
</CustomField>