force-app/main/default/objects/Start__c/fields/AccountsClosingDate__c.field-meta.xml
<CustomField>
    <fullName>AccountsClosingDate__c</fullName>
    <label>Date de première clôture comptable</label>
    <type>Date</type>
</CustomField>