force-app/main/default/objects/Start__c/fields/ActivityStartDate__c.field-meta.xml
<CustomField>
    <fullName>ActivityStartDate__c</fullName>
    <label>Date de début d&#39;activité souhaitée</label>
    <type>Date</type>
</CustomField>