force-app/main/default/objects/Start__c/fields/AdressPostalCode__c.field-meta.xml
<CustomField>
    <fullName>AdressPostalCode__c</fullName>
    <label>Code postal</label>
    <length>5</length>
    <type>Text</type>
</CustomField>