force-app/main/default/objects/Start__c/fields/AdressStreetName__c.field-meta.xml
<CustomField>
    <fullName>AdressStreetName__c</fullName>
    <label>Nom de voie</label>
    <length>80</length>
    <type>Text</type>
</CustomField>