force-app/main/default/objects/Start__c/fields/AdressStreetNumber__c.field-meta.xml
<CustomField>
    <fullName>AdressStreetNumber__c</fullName>
    <label>Numéro de voie</label>
    <length>20</length>
    <type>Text</type>
</CustomField>