force-app/main/default/objects/Start__c/fields/BGINumber__c.field-meta.xml
<CustomField>
    <fullName>BGINumber__c</fullName>
    <formula>Crea__r.NumeroCompteBaseGI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro BGI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>