force-app/main/default/objects/Start__c/fields/CapitalDepositType__c.field-meta.xml
<CustomField>
    <fullName>CapitalDepositType__c</fullName>
    <label>Dépôt des fonds chez</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank</fullName>
                <label>Banque</label>
            </value>
            <value>
                <fullName>Notary</fullName>
                <label>Notaire</label>
            </value>
            <value>
                <fullName>Qonto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>