force-app/main/default/objects/Start__c/fields/CommercialName__c.field-meta.xml
<CustomField>
    <fullName>CommercialName__c</fullName>
    <label>Nom commercial</label>
    <length>80</length>
    <type>Text</type>
</CustomField>