force-app/main/default/objects/Start__c/fields/CompanyCity__c.field-meta.xml
<CustomField>
    <fullName>CompanyCity__c</fullName>
    <label>Ville</label>
    <length>80</length>
    <type>Text</type>
</CustomField>