force-app/main/default/objects/Start__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <label>Dénomination Sociale</label>
    <length>80</length>
    <type>Text</type>
</CustomField>