force-app/main/default/objects/Start__c/fields/CompanyPurpose__c.field-meta.xml
<CustomField>
    <fullName>CompanyPurpose__c</fullName>
    <label>Objet social</label>
    <type>TextArea</type>
</CustomField>