force-app/main/default/objects/Start__c/fields/CompanySign__c.field-meta.xml
<CustomField>
    <fullName>CompanySign__c</fullName>
    <label>Enseigne</label>
    <length>80</length>
    <type>Text</type>
</CustomField>