force-app/main/default/objects/Start__c/fields/Crea__c.field-meta.xml
<CustomField>
    <fullName>Crea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Starts</relationshipName>
    <type>Lookup</type>
</CustomField>