force-app/main/default/objects/Start__c/fields/DateLeadBackCastingError__c.field-meta.xml
<CustomField>
    <fullName>DateLeadBackCastingError__c</fullName>
    <label>Date de retour erreur de casting</label>
    <type>DateTime</type>
</CustomField>