force-app/main/default/objects/Start__c/fields/delay_ProductionToKbis__c.field-meta.xml
<CustomField>
    <fullName>delay_ProductionToKbis__c</fullName>
    <formula>ProjectStatus_KbisDate__c - ProjectStatus_ProductionDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Délai Production -&gt; K-bis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>