force-app/main/default/objects/Start__c/fields/delay_transferToKbis__c.field-meta.xml
<CustomField>
    <fullName>delay_transferToKbis__c</fullName>
    <formula>ProjectStatus_KbisDate__c - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Délai Transfert -&gt; K-bis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>