force-app/main/default/objects/Start__c/fields/delay_transferToProduction__c.field-meta.xml
<CustomField>
    <fullName>delay_transferToProduction__c</fullName>
    <formula>ProjectStatus_ProductionDate__c - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Délai Transfert -&gt; Production</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>