force-app/main/default/objects/Start__c/fields/Has_Lease__c.field-meta.xml
<CustomField>
    <fullName>Has_Lease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bail chargé</label>
    <type>Checkbox</type>
</CustomField>