force-app/main/default/objects/Start__c/fields/Has_Registered_Office_Lessee__c.field-meta.xml
<CustomField>
    <fullName>Has_Registered_Office_Lessee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Domiciliation locataire chargée</label>
    <type>Checkbox</type>
</CustomField>