force-app/main/default/objects/Start__c/fields/Has_Registered_Office_Owner__c.field-meta.xml
<CustomField>
    <fullName>Has_Registered_Office_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Domiciliation propriétaire chargée</label>
    <type>Checkbox</type>
</CustomField>