force-app/main/default/objects/Start__c/fields/HeadquarterType__c.field-meta.xml
<CustomField>
    <fullName>HeadquarterType__c</fullName>
    <label>Type de siège social</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domicile du dirigeant - propriétaire</fullName>
            </value>
            <value>
                <fullName>Locataire</fullName>
                <label>Domicile du dirigeant - locataire</label>
            </value>
            <value>
                <fullName>Hébergé</fullName>
                <label>Domicile du dirigeant - hébergé par un tiers</label>
            </value>
            <value>
                <fullName>Bail commercial</fullName>
            </value>
            <value>
                <fullName>Contrat de domiciliation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>