force-app/main/default/objects/Start__c/fields/ID_Lease__c.field-meta.xml
<CustomField>
    <fullName>ID_Lease__c</fullName>
    <description>Champ système contenant l&#39;ID du ContentDocument chargé en tant que &quot;Bail commercial&quot;. null si aucune carte vitale.</description>
    <label>ID Bail</label>
    <type>TextArea</type>
</CustomField>