force-app/main/default/objects/Start__c/fields/ID_Registered_Office_Hosted__c.field-meta.xml
<CustomField>
    <fullName>ID_Registered_Office_Hosted__c</fullName>
    <description>Champ système contenant l&#39;ID du ContentDocument chargé en tant que &quot;Domiciliation (Hébergé)&quot;. null si aucune carte vitale.</description>
    <label>ID Domiciliation (Hébergé)</label>
    <type>TextArea</type>
</CustomField>