force-app/main/default/objects/Start__c/fields/Initials__c.field-meta.xml
<CustomField>
    <fullName>Initials__c</fullName>
    <label>Sigle</label>
    <length>80</length>
    <type>Text</type>
</CustomField>