force-app/main/default/objects/Start__c/fields/NewContactDate__c.field-meta.xml
<CustomField>
    <fullName>NewContactDate__c</fullName>
    <label>Date reprise de contact</label>
    <type>Date</type>
</CustomField>