force-app/main/default/objects/Start__c/fields/NoPlannedActivity__c.field-meta.xml
<CustomField>
    <fullName>NoPlannedActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cette case est cochée si le projet de création n&#39;a aucune activité ouverte avec une date d&#39;activité prévue aujourd&#39;hui ou dans le futur</description>
    <label>Pas d&#39;activité prévue</label>
    <type>Checkbox</type>
</CustomField>