force-app/main/default/objects/Start__c/fields/NurturingScenario__c.field-meta.xml
<CustomField>
    <fullName>NurturingScenario__c</fullName>
    <label>Scénario Nurturing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Se renseigne, réfléchit</fullName>
            </value>
            <value>
                <fullName>recherche locaux/domiciliation</fullName>
            </value>
            <value>
                <fullName>attente financement</fullName>
            </value>
            <value>
                <fullName>attente rupture conv/inscription PE</fullName>
            </value>
            <value>
                <fullName>attente diplôme/formation</fullName>
            </value>
            <value>
                <fullName>attente liquidation retraite</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>STOP</fullName>
            </value>
            <value>
                <fullName>En attente autres associés</fullName>
                <isActive>false</isActive>
                <label>En attente autres associés</label>
            </value>
            <value>
                <fullName>No Show</fullName>
                <isActive>false</isActive>
                <label>No Show</label>
            </value>
            <value>
                <fullName>Trop en amont</fullName>
                <isActive>false</isActive>
                <label>Trop en amont</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>