force-app/main/default/objects/Start__c/fields/OLDShareCapital__c.field-meta.xml
<CustomField>
    <fullName>OLDShareCapital__c</fullName>
    <label>OLDCapital social</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>