force-app/main/default/objects/Start__c/fields/OwnersPermission__c.field-meta.xml
<CustomField>
    <fullName>OwnersPermission__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Si le siège social se situe chez le dirigeant locataire, le créateur a-t-il obtenu l&#39;autorisation de son propriétaire pour y domicilier son entreprise ?</inlineHelpText>
    <label>Autorisation du propriétaire</label>
    <type>Checkbox</type>
</CustomField>