force-app/main/default/objects/Start__c/fields/PartCashStake__c.field-meta.xml
<CustomField>
    <fullName>PartCashStake__c</fullName>
    <inlineHelpText>Facultatif</inlineHelpText>
    <label>Libération partielle du capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>