force-app/main/default/objects/Start__c/fields/PersonalStatus__c.field-meta.xml
<CustomField>
    <fullName>PersonalStatus__c</fullName>
    <label>Situation personnelle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salarié</fullName>
            </value>
            <value>
                <fullName>Etudiant</fullName>
            </value>
            <value>
                <fullName>Pôle emploi inscrit</fullName>
            </value>
            <value>
                <fullName>Pôle emploi à venir</fullName>
            </value>
            <value>
                <fullName>Indépendant</fullName>
            </value>
            <value>
                <fullName>Auto-Entrepreneur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>