force-app/main/default/objects/Start__c/fields/PlannedCreationDate__c.field-meta.xml
<CustomField>
    <fullName>PlannedCreationDate__c</fullName>
    <label>Date de création prévue</label>
    <type>Date</type>
</CustomField>