force-app/main/default/objects/Start__c/fields/PrimaryCompanyPurpose__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCompanyPurpose__c</fullName>
    <label>Activité principale</label>
    <type>TextArea</type>
</CustomField>