force-app/main/default/objects/Start__c/fields/ProfitsTaxation__c.field-meta.xml
<CustomField>
    <fullName>ProfitsTaxation__c</fullName>
    <label>Imposition des bénéfices</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IS</fullName>
            </value>
            <value>
                <fullName>IR</fullName>
            </value>
            <value>
                <fullName>IR - BIC régime réel normal</fullName>
                <isActive>false</isActive>
                <label>IR - BIC régime réel normal</label>
            </value>
            <value>
                <fullName>IR - BIC régime réel simplifié</fullName>
                <isActive>false</isActive>
                <label>IR - BIC régime réel simplifié</label>
            </value>
            <value>
                <fullName>IR - BNC</fullName>
                <isActive>false</isActive>
                <label>IR - BNC</label>
            </value>
            <value>
                <fullName>IS - régime réel simplifié</fullName>
                <isActive>false</isActive>
                <label>IS - régime réel simplifié</label>
            </value>
            <value>
                <fullName>IS - régime réel normal</fullName>
                <isActive>false</isActive>
                <label>IS- régime réel normal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>