force-app/main/default/objects/Start__c/fields/ProjectComments__c.field-meta.xml
<CustomField>
    <fullName>ProjectComments__c</fullName>
    <label>Commentaires liés au projet</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>