force-app/main/default/objects/Start__c/fields/ProjectStatus__c.field-meta.xml
<CustomField>
    <fullName>ProjectStatus__c</fullName>
    <label>Statut du projet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call conseil</fullName>
                <default>true</default>
                <label>Call conseil</label>
            </value>
            <value>
                <fullName>Prise d&#39;informations</fullName>
            </value>
            <value>
                <fullName>Nurturing</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Kbis reçu</fullName>
            </value>
            <value>
                <fullName>Perdu</fullName>
            </value>
            <value>
                <fullName>Confirmation d&#39;informations</fullName>
                <isActive>false</isActive>
                <label>Confirmation d&#39;informations</label>
            </value>
            <value>
                <fullName>Prise de connaissance</fullName>
                <isActive>false</isActive>
                <label>Prise de connaissance</label>
            </value>
            <value>
                <fullName>Stand-by</fullName>
                <isActive>false</isActive>
                <label>Stand-by</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>