force-app/main/default/objects/Start__c/fields/ProjectStatus_KbisDate__c.field-meta.xml
<CustomField>
    <fullName>ProjectStatus_KbisDate__c</fullName>
    <label>Date K-bis reçu</label>
    <type>DateTime</type>
</CustomField>