force-app/main/default/objects/Start__c/fields/ProjectStatus_ProductionDate__c.field-meta.xml
<CustomField>
    <fullName>ProjectStatus_ProductionDate__c</fullName>
    <label>Date Production</label>
    <type>DateTime</type>
</CustomField>