force-app/main/default/objects/Start__c/fields/SecondaryCompanyPurpose__c.field-meta.xml
<CustomField>
    <fullName>SecondaryCompanyPurpose__c</fullName>
    <label>Activité(s) secondaire(s)</label>
    <type>TextArea</type>
</CustomField>