force-app/main/default/objects/Start__c/fields/ShareCapital__c.field-meta.xml
<CustomField>
    <fullName>ShareCapital__c</fullName>
    <formula>StakeInKind__c +  StakeInCash__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capital social</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>