force-app/main/default/objects/Start__c/fields/StageRegistration__c.field-meta.xml
<CustomField>
    <fullName>StageRegistration__c</fullName>
    <label>Etapes de création</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renseignements à demander</fullName>
                <default>true</default>
                <label>Renseignements à demander</label>
            </value>
            <value>
                <fullName>Transmis au juridique</fullName>
            </value>
            <value>
                <fullName>Dépot du capital</fullName>
            </value>
            <value>
                <fullName>Projet de statuts</fullName>
            </value>
            <value>
                <fullName>Dossier de création</fullName>
            </value>
            <value>
                <fullName>En cours d&#39;immatriculation</fullName>
            </value>
            <value>
                <fullName>Terminé</fullName>
            </value>
            <value>
                <fullName>Informations complètes</fullName>
                <isActive>false</isActive>
                <label>Informations complètes</label>
            </value>
            <value>
                <fullName>Informations incomplètes</fullName>
                <isActive>false</isActive>
                <label>Informations incomplètes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>