force-app/main/default/objects/Start__c/fields/StakeInCash__c.field-meta.xml
<CustomField>
    <fullName>StakeInCash__c</fullName>
    <label>Dont apports en numéraire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>