force-app/main/default/objects/Start__c/fields/StakeInKind__c.field-meta.xml
<CustomField>
    <fullName>StakeInKind__c</fullName>
    <label>Dont apports en nature</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>