force-app/main/default/objects/Start__c/fields/UnitStakeValue__c.field-meta.xml
<CustomField>
    <fullName>UnitStakeValue__c</fullName>
    <label>Valeur de la part</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>