force-app/main/default/objects/Start__c/fields/VatSystem__c.field-meta.xml
<CustomField>
    <fullName>VatSystem__c</fullName>
    <label>Régime de TVA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Régime simplifié</fullName>
                <label>Régime simplifié (option préférentielle)</label>
            </value>
            <value>
                <fullName>Mini réel</fullName>
            </value>
            <value>
                <fullName>Franchise en base</fullName>
            </value>
            <value>
                <fullName>Réel normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>