force-app/main/default/objects/Start__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <label>Nom de domaine</label>
    <type>Url</type>
</CustomField>