force-app/main/default/objects/Start__c/fields/WithoutActivityCreation__c.field-meta.xml
<CustomField>
    <fullName>WithoutActivityCreation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Création sans activité</label>
    <type>Checkbox</type>
</CustomField>