force-app/main/default/objects/Start__c/validationRules/LiberationPartielleCapitalSAS.validationRule-meta.xml
<ValidationRule>
    <fullName>LiberationPartielleCapitalSAS</fullName>
    <active>true</active>
    <description>La libération partielle du capital doit être d&#39;au moins 50% en SAS</description>
    <errorConditionFormula>AND(
$User.BypassValidationRules__c = false, 
OR(
    ISPICKVAL(LegalStatus__c ,&quot;SAS&quot;),
    ISPICKVAL(LegalStatus__c ,&quot;SASU&quot;)
),
PartCashStake__c &lt; ( ShareCapital__c  / 2 )
)</errorConditionFormula>
    <errorDisplayField>PartCashStake__c</errorDisplayField>
    <errorMessage>Doit être au moins égale à 50 % du capital</errorMessage>
</ValidationRule>