force-app/main/default/objects/Start__c/listViews/No_Show.listView-meta.xml
<ListView>
    <fullName>No_Show</fullName>
    <columns>NAME</columns>
    <columns>Crea__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NurturingScenario__c</field>
        <operation>equals</operation>
        <value>No Show</value>
    </filters>
    <label>No Show</label>
</ListView>